minecraft-vanilla.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: minecraft-vanilla
    chart: minecraft-1.1.0
    heritage: Tiller
    release: manual
  name: minecraft-vanilla
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft-vanilla
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minecraft-vanilla
    spec:
      containers:
      - env:
        - name: EULA
          value: "TRUE"
        - name: TYPE
          value: PAPER
        - name: VERSION
          value: 1.14.4
        - name: DIFFICULTY
          value: normal
        - name: WHITELIST
        - name: OPS
          value: jamie_1318
        - name: ICON
        - name: MAX_PLAYERS
          value: "20"
        - name: MAX_WORLD_SIZE
          value: "10000"
        - name: ALLOW_NETHER
          value: "true"
        - name: ANNOUNCE_PLAYER_ACHIEVEMENTS
          value: "true"
        - name: ENABLE_COMMAND_BLOCK
          value: "true"
        - name: FORCE_gameMode
          value: "false"
        - name: GENERATE_STRUCTURES
          value: "true"
        - name: HARDCORE
          value: "false"
        - name: MAX_BUILD_HEIGHT
          value: "256"
        - name: MAX_TICK_TIME
          value: "60000"
        - name: SPAWN_ANIMALS
          value: "true"
        - name: SPAWN_MONSTERS
          value: "true"
        - name: SPAWN_NPCS
          value: "true"
        - name: VIEW_DISTANCE
          value: "10"
        - name: SEED
        - name: MODE
          value: survival
        - name: MOTD
          value: Welcome to Jamie's Minecraft on Kubernetes!
        - name: PVP
          value: "false"
        - name: LEVEL_TYPE
          value: DEFAULT
        - name: GENERATOR_SETTINGS
        - name: LEVEL
          value: world
        - name: ONLINE_MODE
          value: "true"
        - name: MEMORY
          value: 4000M
        - name: JVM_OPTS
        - name: JVM_XX_OPTS
        image: itzg/minecraft-server:latest
        imagePullPolicy: Always
        name: minecraft
        ports:
        - containerPort: 25565
          hostPort: 25565
          name: minecraft
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - mcstatus
            - localhost:25565
            - status
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: "1"
            memory: 4000Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: datadir
        - mountPath: /backup
          name: mnt
          subPath: "Files/backup/vanilla-minecraft"
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
      terminationGracePeriodSeconds: 30
      volumes:
      - name: datadir
        persistentVolumeClaim:
          claimName: vanilla-minecraft2
      - name: mnt
        nfs: 
          path: /mnt
          server: xentor
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minecraft-vanilla
    chart: minecraft-1.1.0
    heritage: Tiller
    release: manual
  name: minecraft-vanilla
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: minecraft
    port: 25565
    protocol: TCP
    targetPort: minecraft
  selector:
    app: minecraft-vanilla
  sessionAffinity: None
  type: LoadBalancer
