postgresql.yaml
---
# Source: postgresql/templates/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgre-postgresql-headless
  labels:
    app: postgresql
    chart: postgresql-2.6.5
    release: "postgre"
    heritage: "Tiller"
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: postgresql
    port: 5432
    targetPort: postgresql
  selector:
    app: postgresql
    release: "postgre"

---
# Source: postgresql/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgre-postgresql
  labels:
    app: postgresql
    chart: postgresql-2.6.5
    release: "postgre"
    heritage: "Tiller"
spec:
  type: ClusterIP
  ports:
  - name: postgresql
    port:  5432
    targetPort: postgresql
  selector:
    app: postgresql
    release: "postgre"
    role: master

---
# Source: postgresql/templates/statefulset.yaml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: postgre-postgresql
  labels:
    app: postgresql
    chart: postgresql-2.6.5
    release: "postgre"
    heritage: "Tiller"
spec:
  serviceName: postgre-postgresql-headless
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: postgresql
      release: "postgre"
      role: master
  template:
    metadata:
      name: postgre-postgresql
      labels:
        app: postgresql
        chart: postgresql-2.6.5
        release: "postgre"
        heritage: "Tiller"
        role: master
    spec:
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      containers:
      - name: postgre-postgresql
        image: docker.io/bitnami/postgresql:10.6.0
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          
        ports:
        - name: postgresql
          containerPort: 5432
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready -U "postgres" --host $POD_IP
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready -U "postgres" --host $POD_IP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        volumeMounts:
        - name: custom-init-scripts
          mountPath: /docker-entrypoint-initdb.d
        - name: data
          mountPath: /bitnami/postgresql
        
        
        
      volumes:
      
      - name: custom-init-scripts
        configMap:
          name: postgre-postgresql-init-scripts
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"

---
# Source: postgresql/templates/configmap.yaml


---
# Source: postgresql/templates/metrics-deployment.yaml


---
# Source: postgresql/templates/metrics-svc.yaml


---
# Source: postgresql/templates/networkpolicy.yaml


---
# Source: postgresql/templates/statefulset-slaves.yaml
