deluge_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge-deployment
  labels:
    app: deluge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
      hostNetwork: true
      containers:
      - name: deluge
        image: linuxserver/deluge
        ports:
        - containerPort: 8112
          name: webold
        - containerPort: 58846
          name: client
        volumeMounts:
        - mountPath: /mnt
          name: mnt
        - mountPath: /config
          name: config
      volumes:
      - name: mnt
        nfs: 
          path: /mnt
          server: xentor
      - name: config
        persistentVolumeClaim:
          claimName: deluge-config
---
apiVersion: v1
kind: Service
metadata:
  name: deluge
  labels:
    app: deluge
spec:
  type: LoadBalancer
  ports:
  - port: 8112
    protocol: TCP
    name: webold
  - port: 58846
    protocol: TCP
    name: client
  selector:
    app: deluge
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deluge-ingress
  annotations:
    kubernetes.io/ingress.class: nginx-internal
spec:
  rules:
  - host: deluge.here
    http:
      paths:
        - backend:
            serviceName: deluge
            servicePort: 8112
