jackett.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: jackett
        image: linuxserver/jackett
        ports:
        - containerPort: 9117
        volumeMounts:
        - mountPath: /mnt
          name: mnt
        - mountPath: /etc/localtime
          name: localtime
        - mountPath: /config
          name: config
      volumes:
      - name: localtime
        hostPath: 
          path: /etc/localtime
      - name: mnt
        nfs: 
          path: /mnt
          server: xentor
      - name: config
        persistentVolumeClaim:
          claimName: jackett-config
---
apiVersion: v1
kind: Service
metadata:
  name: jackett
  labels:
    app: jackett
spec:
  type: ClusterIP
  ports:
  - port: 9117
    protocol: TCP
  selector:
    app: jackett
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jackett-ingress
  annotations:
    kubernetes.io/ingress.class: nginx-prod
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2.jamiechapmanbrn.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.jamiechapmanbrn.com/oauth2/start?rd=https://jackett.jamiechapmanbrn.com"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: “true”
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: jackett.jamiechapmanbrn.com
    http:
      paths:
        - backend:
            serviceName: jackett
            servicePort: 9117
  tls:
  - hosts:
    - jackett.jamiechapmanbrn.com
    secretName: jackett.jamiechapmanbrn.com.tls
