mylar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mylar-deployment
  labels:
    app: mylar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mylar
  template:
    metadata:
      labels:
        app: mylar
    spec:
      containers:
      - name: mylar
        image: linuxserver/mylar
        ports:
        - containerPort: 8090
        volumeMounts:
        - mountPath: /mnt
          name: mnt
        - mountPath: /config
          name: config
      volumes:
      - name: mnt
        nfs: 
          path: /mnt
          server: xentor
      - name: config
        persistentVolumeClaim:
          claimName: mylar-config
---
apiVersion: v1
kind: Service
metadata:
  name: mylar
  labels:
    app: mylar
spec:
  type: ClusterIP
  ports:
  - port: 8090
    protocol: TCP
  selector:
    app: mylar
       
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mylar-ingress
  annotations:
    kubernetes.io/ingress.class: nginx-internal
spec:
  rules:
  - host: mylar.here
    http:
      paths:
        - backend:
            serviceName: mylar
            servicePort: 8090
