plex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: default
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: k3s.io/hostname
                operator: In
                values:
                - box        
      hostNetwork: true
      containers:
      - name: plex
        resources:
          limits:
            cpu: "4"
          requests:
            cpu: "1"
        image: plexinc/pms-docker:public
        ports:
        - containerPort: 32400
          name: web
        - containerPort: 3005
          name: web2
        - containerPort: 8324
          name: web3
        - containerPort: 32410
          name: web4
        - containerPort: 32412
          name: web5
        - containerPort: 32413
          name: web6
        - containerPort: 32414
          name: web7
        volumeMounts:
        - mountPath: /mnt
          name: datadir
        - mountPath: /etc/localtime
          name: localtime
        - mountPath: /config
          name: config
        - mountPath: /transcode
          name: transcode
        imagePullPolicy: Always
      volumes:
      - name: localtime
        hostPath: 
          path: /etc/localtime
      - name: datadir
        persistentVolumeClaim:
          claimName: cephfs-pvc
      - name: config
        persistentVolumeClaim:
          claimName: plex-config
      - name: transcode
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app: plex
spec:
  type: LoadBalancer
  ports:
  - port: 32400
    protocol: TCP
    name: web
  selector:
    app: plex
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: plex-ingress-jamiechapmanbrn
  annotations:
    kubernetes.io/ingress.class: nginx-prod
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: “true”
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: plex.jamiechapmanbrn.com
    http:
      paths:
        - backend:
            serviceName: plex
            servicePort: 32400
  tls:
  - secretName: plex.jamiechapmanbrn.com.tls
    hosts:
    - "plex.jamiechapmanbrn.com"
