radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-deployment
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr
        ports:
        - containerPort: 7878
        volumeMounts:
        - mountPath: /mnt
          name: mnt
        - mountPath: /etc/localtime
          name: localtime
        - mountPath: /config
          name: config
      volumes:
      - name: localtime
        hostPath: 
          path: /etc/localtime
      - name: mnt
        nfs: 
          path: /mnt
          server: xentor
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  type: ClusterIP
  ports:
  - port: 7878
    protocol: TCP
  selector:
    app: radarr
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: radarr-ingress
  annotations:
    kubernetes.io/ingress.class: nginx-prod
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2.jamiechapmanbrn.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.jamiechapmanbrn.com/oauth2/start?rd=https://radarr.jamiechapmanbrn.com"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: “true”
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: radarr.jamiechapmanbrn.com
    http:
      paths:
        - backend:
            serviceName: radarr
            servicePort: 7878
  tls:
  - hosts:
    - radarr.jamiechapmanbrn.com
    secretName: radarr.jamiechapmanbrn.com.tls
