sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        resources:
          limits:
            cpu: "100m"
        image: linuxserver/sonarr
        ports:
        - containerPort: 8989
        volumeMounts:
        - mountPath: /mnt
          name: mnt
        - mountPath: /etc/localtime
          name: localtime
        - mountPath: /config
          name: config
      volumes:
      - name: localtime
        hostPath: 
          path: /etc/localtime
      - name: mnt
        persistentVolumeClaim:
          claimName: cephfs-pvc
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  type: ClusterIP
  ports:
  - port: 8989
    protocol: TCP
  selector:
    app: sonarr
       
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr-ingress
  annotations:
    kubernetes.io/ingress.class: nginx-prod
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2.jamiechapmanbrn.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.jamiechapmanbrn.com/oauth2/start?rd=https://sonarr.jamiechapmanbrn.com"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: “true”
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: sonarr.jamiechapmanbrn.com
    http:
      paths:
        - backend:
            serviceName: sonarr
            servicePort: 8989
    
  tls:
  - hosts:
    - sonarr.jamiechapmanbrn.com
    secretName: sonarr.jamiechapmanbrn.com.tls
