sonarr_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-deployment
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        resources:
          limits:
            cpu: "1"
        image: linuxserver/sonarr
        ports:
        - containerPort: 8989
        volumeMounts:
        - mountPath: /mnt
          name: mnt
        - mountPath: /etc/localtime
          name: localtime
        - mountPath: /config
          name: config
      volumes:
      - name: localtime
        hostPath: 
          path: /etc/localtime
      - name: mnt
        nfs: 
          path: /mnt
          server: xentor
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  type: ClusterIP
  ports:
  - port: 8989
    protocol: TCP
  selector:
    app: sonarr
       
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr-ingress
  annotations:
    kubernetes.io/ingress.class: nginx-internal
spec:
  rules:
  - host: sonarr.here
    http:
      paths:
        - backend:
            serviceName: sonarr
            servicePort: 8989
