transmission.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      hostNetwork: true
      containers:
      - name: transmission
        image: linuxserver/transmission
        ports:
        - containerPort: 9091
          name: http
        - containerPort: 51413
          name: torreent
        volumeMounts:
        - mountPath: /mnt
          name: mnt
        - mountPath: /config
          name: config
      volumes:
      - name: mnt
        nfs: 
          path: /mnt
          server: xentor
      - name: config
        persistentVolumeClaim:
          claimName: transmission-config
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  ports:
  - port: 9091
    protocol: TCP
    name: http
  selector:
    app: transmission
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: transmission
  annotations:
    kubernetes.io/ingress.class: nginx-internal
spec:
  rules:
  - host: transmission.here
    http:
      paths:
        - backend:
            serviceName: transmission
            servicePort: 9091
